--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="result-container">
             <!--Flip Card Result-->
             <p id="result-message">
-                <b>Your Result Will Be Shown Here.</b>
+                <b>Your result will be here.</b>
             </p>
             <br>
             <p id="win-score">--- --- ---</p>
